helm 수정 및 fluss-client example log 추가